--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -42,7 +42,7 @@ h4 {
 
 p {
   margin: 0.5rem 0 0.5rem 0;
-  max-width: 70ch;
+  max-width: var(--content-width);
   line-height: 1.6;
   font-size: 16px;
   color: var(--ui-text-low-contrast);
