change various styles

--- a/src/components/Cards/Card.astro
+++ b/src/components/Cards/Card.astro
@@ -13,7 +13,7 @@ const { width, height } = Astro.props;
 
 <style define:vars={{ width: width, height: height }}>
   .card {
-    padding: var(--spacing-sm);
+    padding: 1rem;
     width: 100%;
     height: var(--height);
     background-color: var(--ui-element-bg);
