--- a/src/components/Hero/HeroPhotoAndText.astro
+++ b/src/components/Hero/HeroPhotoAndText.astro
@@ -71,8 +71,7 @@ import background from "../../assets/images/hero_background.webp";
 
   @media only screen and (min-width: 1024px) {
     .hero {
-      background-color: var(--ui-bg);
-      box-shadow: var(--shadow-lg);
+      background-color: var(--ui-element-bg);
     }
 
     .hero > div {
