change heading font to Inder

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -19,7 +19,7 @@
 :root {
   /* FONT SETTINGS */
   --font-text: "Poppins", sans-serif;
-  --font-headings: "PT Sans", sans-serif;
+  --font-headings: "Inder", sans-serif;
 
   /* SPACING */
   --spacing-sm: 0.5rem;
