--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 // Styles
 import "@fontsource/poppins";
-import "@fontsource/pt-sans";
+import "@fontsource/inder";
 import "../styles/reset.css";
 import "../styles/colors.css";
 import "../styles/main.css";
