--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import HeroPhotoAndText from "../components/Hero/HeroPhotoAndText.astro";
 import ServicesFlipCard from "../components/Services/ServicesFlipCards.astro";
 import ContactForm from "../components/ContactForm.astro";
 import ProgrammingLanguages from "../components/ProgrammingLanguages.astro";
+import ProjectCards from "../components/Services/ProjectCards.astro";
 ---
 
 <Layout title="Home Page">
@@ -11,7 +12,8 @@ import ProgrammingLanguages from "../components/ProgrammingLanguages.astro";
   <HeroPhotoAndText />
 
   <h2 class="container">Things I made...</h2>
-  <ServicesFlipCard />
+
+  <ProjectCards />
 
   <div class="container content">
     <h2>...using these things:</h2>
