fix blog url in footer, fix url of astro article

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -43,7 +43,7 @@ const navigation = {
     },
     {
       text: "Blog",
-      url: "/blog/page=1",
+      url: "/blog/page-1",
     },
     {
       text: "About me",
