--- a/src/components/Header/MobileNav/MobileNav.astro
+++ b/src/components/Header/MobileNav/MobileNav.astro
@@ -3,91 +3,93 @@ import { Icon } from "astro-icon";
 import style from "./MobileNav.module.css";
 
 type menuOptionsType = {
-	title: string;
-	path: string;
-	badge?: true;
-	children?: menuOptionsType[];
+  title: string;
+  path: string;
+  badge?: true;
+  children?: menuOptionsType[];
 };
 interface Props {
-	menuOptions: menuOptionsType[];
+  menuOptions: menuOptionsType[];
 }
 
 const { menuOptions } = Astro.props;
 ---
 
-<button
-	class={style["menu-button"]}
-	id='menu-button'
-	aria-label='Menu Button'
->
-	<Icon name='ic:baseline-menu' />
+<button class={style["menu-button"]} id="menu-button" aria-label="Menu Button">
+  <Icon name="ic:baseline-menu" />
 </button>
 <div
-	id='mobile-menu'
-	class={`mobile-hidden ${style.wrapper}`}
-	data-options={JSON.stringify(menuOptions)}
+  id="mobile-menu"
+  class="hidden wrapper"
+  data-options={JSON.stringify(menuOptions)}
 >
-	<menu class={style.container}>
-		{
-			menuOptions.map((item, index) => {
-				return item.children ? (
-					<li>
-						<button
-							class={style.link}
-							id={`${item.title}-dropdown`}
-						>
-							{item.title}
-							<Icon name='fluent:chevron-down-12-filled' />
-						</button>
+  <menu class={style.container}>
+    {
+      menuOptions.map((item, index) => {
+        return item.children ? (
+          <li>
+            <button class={style.link} id={`${item.title}-dropdown`}>
+              {item.title}
+              <Icon name="fluent:chevron-down-12-filled" />
+            </button>
 
-						<menu class='submenu hidden'>
-							{item.children.map((item) => {
-								return (
-									<li>
-										<a
-											href={item.path}
-											class={style.link}
-										>
-											{item.title}
-										</a>
-									</li>
-								);
-							})}
-						</menu>
-					</li>
-				) : (
-					<li>
-						<a
-							href={item.path}
-							class={style.link}
-						>
-							{item.title}
-						</a>
-					</li>
-				);
-			})
-		}
-	</menu>
+            <menu class="submenu hidden">
+              {item.children.map((item) => {
+                return (
+                  <li>
+                    <a href={item.path} class={style.link}>
+                      {item.title}
+                    </a>
+                  </li>
+                );
+              })}
+            </menu>
+          </li>
+        ) : (
+          <li>
+            <a href={item.path} class={style.link}>
+              {item.title}
+            </a>
+          </li>
+        );
+      })
+    }
+  </menu>
 </div>
 
 <style>
-	button {
-		padding-left: 0;
-	}
+  .wrapper {
+    grid-column: 1/3;
+    justify-self: end;
+  }
 
-	.submenu {
-		padding-left: var(--spacing-md);
-	}
+  button {
+    padding-left: 0;
+  }
 
-	.submenu > li {
-		list-style: none;
-	}
+  .submenu {
+    padding-left: var(--spacing-md);
+  }
 
-	.hidden {
-		display: none;
-	}
+  .submenu > li {
+    list-style: none;
+  }
+
+  .hidden {
+    display: none;
+  }
+
+  @media only screen and (min-width: 1024px) {
+    .wrapper {
+      display: none;
+    }
+
+    .menu-button {
+      display: none;
+    }
+  }
 </style>
 
 <script>
-	import "./MobileDropdown";
+  import "./MobileDropdown";
 </script>
