--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -26,9 +26,12 @@
   display: none;
 }
 
+.hidden {
+  display: none;
+}
+
 @media (min-width: 1024px) {
   .mobile-hidden {
     display: block;
   }
 }
-
