--- a/src/components/Services/ProjectCards.astro
+++ b/src/components/Services/ProjectCards.astro
@@ -64,6 +64,7 @@ const { cardSize = { width: "300px", height: "250px" } } = Astro.props;
   }
 
   img {
+    display: none;
     object-fit: cover;
     height: 100%;
     width: 120px;
@@ -112,6 +113,12 @@ const { cardSize = { width: "300px", height: "250px" } } = Astro.props;
     display: flex;
     gap: var(--spacing-sm);
     justify-content: stretch;
+  }
+
+  @media (min-width: 420px) {
+    img {
+      display: block;
+    }
   }
 
   @media (min-width: 1024px) {
