--- a/src/components/Header/DesktopNav/DesktopNav.astro
+++ b/src/components/Header/DesktopNav/DesktopNav.astro
@@ -118,7 +118,7 @@ const { menuOptions } = Astro.props;
     padding: var(--spacing-md);
     width: max-content;
     position: absolute;
-    top: var(--header-height);
+    top: calc(var(--header-height) / 1.5);
     background-color: var(--ui-element-bg);
     box-shadow: var(--shadow-sm);
     border-radius: var(--radius-sm);
