--- a/src/components/Header/MobileNav/MobileNav.astro
+++ b/src/components/Header/MobileNav/MobileNav.astro
@@ -61,6 +61,14 @@ const { menuOptions } = Astro.props;
   .wrapper {
     grid-column: 1/3;
     justify-self: end;
+    width: min(400px, 80vw);
+    grid-column: 1/3;
+    justify-self: end;
+
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
   }
 
   button {
