--- a/src/components/RecentPosts.astro
+++ b/src/components/RecentPosts.astro
@@ -94,6 +94,22 @@ const cardSize = 200;
     aspect-ratio: 1/1;
   }
 
+  .post-content {
+    display: flex;
+    min-height: var(--size);
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1;
+    gap: 1.5rem;
+    padding: 1.5rem 1.5rem 0.5rem 1.5rem;
+  }
+
+  .post-content > :last-child {
+    font-size: 14px;
+    display: flex;
+    justify-content: end;
+  }
+
   @media only screen and (min-width: 640px) {
     ul {
       grid-template-columns: repeat(auto-fit, var(--size));
