--- a/src/components/Cards/Card.astro
+++ b/src/components/Cards/Card.astro
@@ -13,6 +13,7 @@ const { width, height } = Astro.props;
 
 <style define:vars={{ width: width, height: height }}>
   .card {
+    border: 2px solid var(--ui-border);
     padding: 1rem;
     width: 100%;
     height: var(--height);
@@ -29,6 +30,13 @@ const { width, height } = Astro.props;
   }
 
   .card:hover {
+    border: 2px solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(
+      to left,
+      var(--primary),
+      var(--accent)
+    );
     background-color: var(--ui-element-bg-hovered);
     box-shadow:
       var(--ui-border-hovered) 0px 1px 2px inset,
