--- a/src/components/Services/ProjectCards.astro
+++ b/src/components/Services/ProjectCards.astro
@@ -26,7 +26,12 @@ const { cardSize = { width: "300px", height: "250px" } } = Astro.props;
         <Card width={cardSize.width} height={cardSize.height}>
           <div class="wrapper">
             <div class="contents">
-              <h2>{project.title}</h2>
+              <a
+                href={`/projects/${project.title.toLowerCase()}`}
+                class="project-link"
+              >
+                <h3>{project.title}</h3>
+              </a>
               <p>{project.description}</p>
               <div class="buttons">
                 <Button colour="primary" hideBorder>
@@ -63,8 +68,20 @@ const { cardSize = { width: "300px", height: "250px" } } = Astro.props;
     margin-top: 0;
   }
 
+  .project-link > h3 {
+    background: var(--gradient-text);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .project-link:hover > h3 {
+    background: var(--gradient-text-hover);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
   a:hover {
-    text-decoration: none;
+    text-decoration: underline;
   }
 
   .gh-link {
