--- a/src/components/Header/DesktopNav/DesktopNav.astro
+++ b/src/components/Header/DesktopNav/DesktopNav.astro
@@ -119,7 +119,7 @@ const { menuOptions } = Astro.props;
     width: max-content;
     position: absolute;
     top: calc(var(--header-height) / 1.5);
-    background-color: var(--ui-element-bg);
+    background-color: var(--ui-bg-subtle);
     box-shadow: var(--shadow-sm);
     border-radius: var(--radius-sm);
     z-index: 20;
