--- a/src/components/Services/ProjectCards.astro
+++ b/src/components/Services/ProjectCards.astro
@@ -35,16 +35,18 @@ const { cardSize = { width: "300px", height: "250px" } } = Astro.props;
               <p>{project.description}</p>
               <div class="buttons">
                 <Button colour="primary" hideBorder>
-                  <a href={project.url} style="color: black;">
+                  <a href={project.url} target="_blank" style="color: black;">
                     Try it
                   </a>
                 </Button>
-                <Button colour="primary" hideBackground>
-                  <a href={project.githubURL} class="gh-link">
-                    <Icon name="github" />
-                    Github
-                  </a>
-                </Button>
+                {project.githubURL && (
+                  <Button colour="primary" hideBackground>
+                    <a href={project.githubURL} target="_blank" class="gh-link">
+                      <Icon name="github" />
+                      Github
+                    </a>
+                  </Button>
+                )}
               </div>
             </div>
             {project.picture && (
@@ -156,7 +158,7 @@ const { cardSize = { width: "300px", height: "250px" } } = Astro.props;
 
   @media (min-width: 1024px) {
     img {
-      object-fit: cover;
+      object-fit: fill;
       height: 100%;
       width: 180px;
       aspect-ratio: 1/1;
