--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -1,141 +1,153 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import OurTeam from "../components/AboutUs/OurTeam.astro";
-import ContactInfo from "../components/ContactInfo.astro";
-import Socials from "../components/Socials.astro";
-import ProgrammingLanguages from "../components/ProgrammingLanguages.astro";
+import Layout from "../layouts/Layout.astro"
+import ContactInfo from "../components/ContactInfo.astro"
+import Socials from "../components/Socials.astro"
+import ProgrammingLanguages from "../components/ProgrammingLanguages.astro"
 ---
 
 <Layout title="About Me">
-  <div class="container">
-    <h1>About me</h1>
-    <h2>Who am I?</h2>
-    <p>
-      Greetings! I'm Carson Hartley, aka Chartley. I'm a web developer from
-      Alberta, Canada. I've been self teaching myself programming for the last
-      couple years now, and it has since become my greatest passion.
-    </p><p>
-      I think what I love most about programming is that as a creative
-      endeavour, it is very multidisciplinary. It allows me to work with images,
-      text, logic, and more. The world of technology moves so fast, the
-      opportunity for continuous learning is something that keeps me moving
-      forward. Most of all, I love the collaborative nature of programming,
-      being about to work with others, and build things that solve peoples
-      problem is what I find most rewarding.
-    </p>
+    <div class="container">
+        <h1>About me</h1>
+        <h2>Who am I?</h2>
+        <p>
+            Greetings! I'm Carson Hartley, aka Chartley. I'm a web developer
+            from Alberta, Canada. I've been self teaching myself programming for
+            the last couple years now, and it has since become my greatest
+            passion.
+        </p><p>
+            I think what I love most about programming is that as a creative
+            endeavour, it is very multidisciplinary. It allows me to work with
+            images, text, logic, and more. The world of technology moves so
+            fast, the opportunity for continuous learning is something that
+            keeps me moving forward. Most of all, I love the collaborative
+            nature of programming, being about to work with others, and build
+            things that solve peoples problem is what I find most rewarding.
+        </p>
 
-    <p>
-      I'm currently looking for work, so if you have a website or any other
-      problem to solve, please reach out! I'd also love the opportunity to work
-      in an agency or startup, so reach out if you think we could be a good fit!
-    </p>
-    <br />
-    <strong>Cheers!</strong>
-    <br /><em>~Chartley</em>
+        <p>
+            I'm currently looking for work, so if you have a website or any
+            other problem to solve, please reach out! I'd also love the
+            opportunity to work in an agency or startup, so reach out if you
+            think we could be a good fit!
+        </p>
+        <br />
+        <strong>Cheers!</strong>
+        <br /><em>~Chartley</em>
 
-    <!-- Our Story -->
-    <h2>What's my story?</h2>
-    <p>
-      I grew up in Grande Prairie, Alberta. I lived there until I was 19, before
-      moving to Calgary, Alberta for College. There, I studied <em
-        >Environmental Technology</em
-      >. I really ejoyed studying chemistry, math, ecology, and everything else
-      in that program. However, I found that the jobs in the end didn't spark
-      passion with me, I couldn't see myself being heavily involved in Alberta's
-      Oil industry. From there, I pivoted into carpentry instead, building
-      decks, housing construction, and working in a professional carpentry shop.
-    </p>
-    <p>
-      In my early 30s, I moved to Victoria Canada. There, I found work with an
-      arborist company. I think this might have been the funnest job I've ever
-      had, the work was rewarding and the crew was a lot of fun. While living on
-      the island, I also fell in love with rock climbing, which as since been a
-      great passion that I can see being a life long adventure.
-    </p>
-    <p>
-      I've since moved back to the Calgary area, to be closer to family. It's
-      here in the last couple years that I've commited to learning programming
-      while working a part time job in Calgary.
-    </p>
+        <!-- Our Story -->
+        <h2>What's my story?</h2>
+        <p>
+            I grew up in Grande Prairie, Alberta. I lived there until I was 19,
+            before moving to Calgary, Alberta for College. There, I studied <em
+                >Environmental Technology</em
+            >, chemistry, math, ecology, and everything else in that program.
+            However, I found that the jobs in the end didn't spark passion with
+            me, I couldn't see myself being heavily involved in Alberta's Oil
+            industry. From there, I pivoted into carpentry instead, building
+            decks, housing construction, and working in a professional carpentry
+            shop.
+        </p>
+        <p>
+            In my early 30s, I moved to Victoria Canada. There, I found work
+            with an arborist company. I think this might have been the funnest
+            job I've ever had, the work was rewarding and the crew was a lot of
+            fun. While living on the island, I also fell in love with rock
+            climbing, which as since been a great passion that I can see being a
+            life long adventure.
+        </p>
+        <p>
+            I've since moved back to the Calgary area, to be closer to family.
+            It's here in the last couple years that I've commited to learning
+            programming while working a part time job in Calgary.
+        </p>
 
-    <!-- What am I using? -->
-    <h2>What am I using?</h2>
-    <h3>Languages</h3>
-    <p>
-      Most of what I use is centered around web development. As a hobby, I
-      explore other languages for game development or other curious endeavours.
-    </p>
-    <ProgrammingLanguages coloredIcons={false} />
+        <!-- What am I using? -->
+        <h2>What am I using?</h2>
+        <h3>Languages</h3>
+        <p>
+            Most of what I use is centered around web development. As a hobby, I
+            explore other languages for game development or other curious
+            endeavours.
+        </p>
+        <ProgrammingLanguages coloredIcons={false} />
 
-    <h3>Hardware</h3>
-    <p>
-      For a computer, I'm using an M1 Macbook Air. I use a standard Apple
-      keyboard in desktop environment, as well as trackpad and mouse. I use one
-      23" monitor, with the laptop itself being a second display.
-    </p>
+        <h3>Hardware</h3>
+        <p>
+            For a computer, I'm using an M1 Macbook Air. I use a standard Apple
+            keyboard in desktop environment, as well as trackpad and mouse. I
+            use one 23" monitor, with the laptop itself being a second display.
+        </p>
 
-    <h3>Software</h3>
-    <h4>Text Editor</h4>
-    <p>
-      I'm using <strong>Neovim</strong> as a text editor. Up until recently, I
-      used VS Code. I'm happy with either editor, but I think using Vim keybinds
-      is both fun and a good investment for the future!
-    </p>
-    <h4>Note Taking</h4>
-    <p>
-      I think taking notes is important, I use <strong>Obsidian</strong> for
-      that. It's been an invaluable resource for collecting links, knowledge,
-      snippets, and more. Most of all I just use it for daily notes for thinking
-      in a more structured way.
-    </p>
+        <h3>Software</h3>
+        <h4>Text Editor</h4>
+        <p>
+            I'm using <strong>Neovim</strong> as a text editor. Up until
+            recently, I used VS Code. I'm happy with either editor, but I think
+            using Vim keybinds is both fun and a good investment for the future!
+        </p>
+        <h4>Note Taking</h4>
+        <p>
+            I think taking notes is important, I use <strong>Obsidian</strong>
+             for that. It's been an invaluable resource for collecting links,
+            knowledge, snippets, and more. Most of all I just use it for daily
+            notes for thinking in a more structured way.
+        </p>
 
-    <!-- <!-- Endorsements -->
-    <!-- <h2>Endorsements</h2> -->
-    <!-- <h3>A high profile client</h3> -->
-    <!-- <p class="endorsement-text"> -->
-    <!--   Wholeheartedly recommending [Your Organization Name]! Their expertise in -->
-    <!--   [industry or purpose] is evident in every interaction. From innovative -->
-    <!--   solutions to unwavering commitment to [core values or mission], [Your -->
-    <!--   Organization Name] stands out. A top choice for excellence and -->
-    <!--   personalized service in [industry]. -->
-    <!-- </p> -->
-    <h2>How can you get ahold of me?</h2>
-    <div class="contact-container">
-      <!-- Contact Info -->
-      <ContactInfo />
-      <!-- Social Media -->
-      <Socials />
+        <!-- <!-- Endorsements -->
+        <!-- <h2>Endorsements</h2> -->
+        <!-- <h3>A high profile client</h3> -->
+        <!-- <p class="endorsement-text"> -->
+        <!--   Wholeheartedly recommending [Your Organization Name]! Their expertise in -->
+        <!--   [industry or purpose] is evident in every interaction. From innovative -->
+        <!--   solutions to unwavering commitment to [core values or mission], [Your -->
+        <!--   Organization Name] stands out. A top choice for excellence and -->
+        <!--   personalized service in [industry]. -->
+        <!-- </p> -->
+        <h2>How can you get ahold of me?</h2>
+        <div class="contact-container">
+            <!-- Contact Info -->
+            <ContactInfo />
+            <!-- Social Media -->
+            <Socials />
+        </div>
     </div>
-  </div>
 </Layout>
 
 <style>
-  .endorsement-text {
-    font-style: italic;
-  }
-
-  .socials_wrapper {
-    display: flex;
-    gap: var(--spacing-sm);
-    flex-direction: column;
-  }
-
-  .contact_wrapper {
-    display: flex;
-    flex-direction: row;
-    gap: var(--spacing-sm);
-    justify-content: start;
-  }
-
-  /* This just makes it so they look lined up, more like a grid. */
-  .contact_wrapper > strong {
-    min-width: 10ch;
-  }
-
-  @media only screen and (min-width: 1024px) {
-    .contact-container {
-      display: flex;
-      gap: var(--spacing-lg);
+    .endorsement-text {
+        font-style: italic;
     }
-  }
+
+    .socials_wrapper {
+        display: flex;
+        gap: var(--spacing-sm);
+        flex-direction: column;
+    }
+
+    .contact_wrapper {
+        display: flex;
+        flex-direction: row;
+        gap: var(--spacing-sm);
+        justify-content: start;
+    }
+
+    /* This just makes it so they look lined up, more like a grid. */
+    .contact_wrapper > strong {
+        min-width: 10ch;
+    }
+
+    .contact_wrapper {
+        min-width: none;
+    }
+
+    .contact_wrapper {
+        min-width: 0;
+    }
+
+    @media only screen and (min-width: 1024px) {
+        .contact-container {
+            display: flex;
+            gap: var(--spacing-lg);
+        }
+    }
 </style>
